Adicionada a pagina de Exibir Agendamentos da barbearia

--- a/src/Hairday/appsettings.json
+++ b/src/Hairday/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "server=localhost;database=database;user=root;password=;"
+        "DefaultConnection": "server=localhost;database=database_demo;user=root;password=;"
     }
 }
